server/compilers/goLiteJS/src/test/ml2/invalid/invreturn2.go
package main
//Error: Not a return on the nested else if expression

func main() bool{
    var a bool = true;
    if a {
        return true
    }else if a {
        
    }else if a {
        return true
    }else {
        return false
    }
}
